2004-03-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (__explain_placement):
	new function

	* libs/FScreen.c (FScreenIsRectangleOnScreen):
	new function

	* fvwm/builtins.c (CMD_BugOpts):
	* fvwm/screen.h (ScreenInfo):
	new BugOpts option ExplainWindowPlacement
	renamed some members of Screen

2004-03-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (__place_get_wm_pos):
	(__place_get_nowm_pos):
	(__place_get_placement_flags):
	(__place_window):
	(__place_handle_x_resources):
	(setup_window_placement):
	split into multiple functions
	cleaned up a little

2004-03-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (setup_window_placement):
	* fvwm/placement.c (setup_window_placement):
	moved function to placement.c
	fixed using PLACE_AGAIN placement mode
	(PlaceWindow):
	(__place_window):
	renamed function

2004-03-06  Marcus Lundblad  <ml@update.uu.se>

	* libs/Flocale.c (FlocaleDrawString)
	(FlocaleDrawUnderline)
	(FlocaleTextWidth):
	reduced redundant calls to iconv

2004-03-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (CMD_XorValue):
	fixed a very small outline drawing problem caused by using 0 line width
	instead of 1

	* NEWS:
	* configure.in:
	increased version to 2.5.10

	* configure.in:
	* NEWS:
	updated for 2.5.9 release

	* fvwm/functions.c (execute_function_override_window):
	* fvwm/module_interface.c (ExecuteModuleCommand):
	* fvwm/conditional.c (circulate_cmd):
	sometimes, DeferExecution was called although a window was already
	selected, for example with the "Current" commend; fixed

2004-02-28  Olivier Chapuis  <olivier.chapuis@free.fr>

	* libs/FImage.c (FShmSafeCreateImage):
	Fixed some safety tests

2004-02-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (__handle_cr_on_client):
	fixed a bug in the Jave configure request workaround

2004-02-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (__cr_detect_icccm_move):
	improved motion method detection for fullscreen requests
