@@ -1,3 +1,8 @@
+2004-03-19  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmIconMan/FvwmIconMan.c:
+	applied inverted relief patch by Chris Ross
+
 2004-03-15  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmTaskBar/FvwmTaskBar.c (AdjustWindow):
