@@ -1,3 +1,11 @@
+2004-03-19  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* libs/Graphics.c (do_relieve_rectangle_with_rotation):
+	improved rotation code
+
+	* libs/gravity.c (gravity_add_rotations):
+	new function
+
 2004-03-17  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/placement.c (__explain_placement):
